--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
                             <li>
                                 <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
+                                   <li>
+                                        <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a>
+                                    </li>
                                     <li>
                                         <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
@@ -127,10 +130,10 @@
                                         <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
+                                        <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
                                     </li>
                                 </ul>
                             </li>
@@ -297,7 +300,7 @@
                     <div class="col-md-12">
                         <div class="moveone">
                             <div class="box_blue">
-                                <a href="#" class="h1block">ИЗГОТОВЛЕНИЕ СЦЕНАРИЯ
+                                <a href="index_08.html" class="h1block">ИЗГОТОВЛЕНИЕ СЦЕНАРИЯ
 							<h2 class="h2block">для радио и видеорекламы, написание текстов песен, переводы</h2></a>
                             </div>
                             <div class="rect_blue"></div>
@@ -321,7 +324,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-6 clearfix">
                         <div class="moveone">
                             <div class="box_green">
-                                <a href="#" class="h1block">ИЗГОТОВЛЕНИЕ<br> АУДИОРОЛИКОВ
+                                <a href="index_02.html" class="h1block">ИЗГОТОВЛЕНИЕ<br> АУДИОРОЛИКОВ
 							<h2 class="h2block">обработка голоса и сведение,<br> аудиоэффекты</h2></a>
                             </div>
                             <div class="rect_l"></div>
@@ -331,7 +334,7 @@
                     <div class="col-md-6 col-sm-6 col-xs-6">
                         <div class="moveone">
                             <div class="box_yellow">
-                                <a href="#" class="h1block">ОЗВУЧАНИЕ<br> ВИДЕОРОЛИКОВ
+                                <a href="index_03.html" class="h1block">ОЗВУЧАНИЕ<br> ВИДЕОРОЛИКОВ
 							<h2 class="h2block">cинхрон, липсинг, адаптация<br> закадровый голос, субтитры,</h2></a>
                             </div>
                             <div class="rect_r"></div>
@@ -366,14 +369,18 @@
                         <div class="boxend_blue">
                             <h1 class="h1block"><i class="fa fa-check-square-o"></i> НАШИ ЦАРАПИНЫ</h1>
                             <div class="scratches clearfix">
-                                <figure class="sign">
+                                <a href="index_02.html">
+                                   <figure class="sign">
                                     <p><img src="img/radio.png" alt="silafm" class="incircle"></p>
                                     <figcaption>Аудиоролики</figcaption>
                                 </figure>
+                                </a>
+                                <a href="index_03.html">
                                 <figure class="sign">
                                     <p><img src="img/tv.png" alt="silafm" class="incircle"></p>
                                     <figcaption>Озвучки</figcaption>
                                 </figure>
+                                </a>
                                 <figure class="sign">
                                     <p><img src="img/film.png" alt="silafm" class="incircle"></p>
                                     <figcaption>Видеоролики</figcaption>
