--- a/index_02.html
+++ b/index_02.html
@@ -105,6 +105,9 @@
                             <li>
                                 <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
+                                   <li>
+                                        <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a>
+                                    </li>
                                     <li>
                                         <a href="#"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
@@ -149,7 +152,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-1" data-parent="#accordion" data-toggle="collapse">Игровые и постановочные ролики</a>
+                            <a href="#collapse-1" data-parent="#accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-right"></span> Игровые и постановочные ролики</a>
                 </h4>
                         </div>
                         <div id="collapse-1" class="panel-collapse collapse">
@@ -479,7 +482,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-2" data-parent="#accordion" data-toggle="collapse">Информационно-музыкальные аудиоролики</a>
+                            <a href="#collapse-2" data-parent="#accordion" data-toggle="collapse"> <span class="glyphicon glyphicon-chevron-right"></span> Информационно-музыкальные аудиоролики</a>
                 </h4>
                         </div>
                         <div id="collapse-2" class="panel-collapse collapse">
@@ -837,7 +840,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-3" data-parent="#accordion" data-toggle="collapse">Имидживая аудиореклама</a>
+                            <a href="#collapse-3" data-parent="#accordion" data-toggle="collapse"> <span class="glyphicon glyphicon-chevron-right"></span> Имидживая аудиореклама</a>
                 </h4>
                         </div>
                         <div id="collapse-3" class="panel-collapse collapse">
@@ -1337,7 +1340,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-4" data-parent="#accordion" data-toggle="collapse">Рекламные песни, пропевки и музыкальные логотипы</a>
+                            <a href="#collapse-4" data-parent="#accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-right"></span> Рекламные песни, пропевки и музыкальные логотипы</a>
                 </h4>
                         </div>
                         <div id="collapse-4" class="panel-collapse collapse">
@@ -1707,7 +1710,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-5" data-parent="#accordion" data-toggle="collapse">Оформление радиоэфира, джинглы, отбивки, анонсы</a>
+                            <a href="#collapse-5" data-parent="#accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-right"></span> Оформление радиоэфира, джинглы, отбивки, анонсы</a>
                 </h4>
                         </div>
                         <div id="collapse-5" class="panel-collapse collapse">
@@ -1830,7 +1833,7 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                            <a href="#collapse-6" data-parent="#accordion" data-toggle="collapse">Голосовые приветствия, голосовое меню, запись IVR</a>
+                            <a href="#collapse-6" data-parent="#accordion" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-right"></span> Голосовые приветствия, голосовое меню, запись IVR</a>
                 </h4>
                         </div>
                         <div id="collapse-6" class="panel-collapse collapse">
