--- a/index_06.html
+++ b/index_06.html
@@ -123,6 +123,9 @@
                             <li>
                                 <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
+                                   <li>
+                                        <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a>
+                                    </li>
                                     <li>
                                         <a href="index_02.html"><img src="img/radio_c.png" alt="img06" /><span>Аудиролики</span></a>
                                     </li>
@@ -130,10 +133,10 @@
                                         <a href="index_03.html"><img src="img/tv_c.png" alt="img06" /><span>Озвучивание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
+                                        <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
                                     </li>
                                 </ul>
                             </li>
