--- a/index_08.html
+++ b/index_08.html
@@ -123,7 +123,7 @@
                             <li>
                                 <a href="#">Услуги</a>
                                 <ul class="cbp-hssubmenu">
-                                    <li>
+                                   <li>
                                         <a href="index_08.html"><img src="img/print.png" alt="img06" /><span>Сценарии</span></a>
                                     </li>
                                     <li>
@@ -136,12 +136,12 @@
                                         <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
                                     </li>
                                 </ul>
                             </li>
                             <li><a href="index_06.html">Оплата</a></li>
-                            <li><a href="#">Контакты</a></li>
+                            <li><a href="index_07.html">Контакты</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -206,158 +206,32 @@
             <div class="fillcontainer">
                 <div class="row">
                     <div class="about">
-                        <div class="col-md-3 col-sm-4">
-                            <h2>Наши контакты</h2>
-                            <hr>
-                            <br>
-                            <h4>Москва</h4>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Телефон:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">8 (495) 545-45-13</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Телефон:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p class="littext">8 (965) 316-10-80</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Адрес:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">пер. Электрический д.12, помещение ІІ, комн. 6</p>
-                                </div>
-                            </div>
-                            <br>
-                            <h4>Киев</h4>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Телефон:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">+38 (044) 545-77-13</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Телефон:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">+38 (050) 530-79-75</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Адрес:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">пер. Электрический д.12, помещение ІІ, комн. 6</p>
-                                </div>
-                            </div>
-                            <br>
-                            <h4>В интернете</h4>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">e-mail:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext"><a href="mailto:info@sila.fm" class="link2">info@sila.fm</a></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">ICQ:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">322-653-493</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3 col-sm-4 col-xs-6">
-                                    <p  class="littext">Skype:</p>
-                                </div>
-                                <div class="col-md-9 col-sm-8 col-xs-6">
-                                    <p  class="littext">sila.fm</p>
-                                </div>
-                            </div>
-<br>
-                            <h4>График работы:</h4>
-                            <p  class="littext">По будним дням: 09:00 - 23:00
-                                <br>По субботам: 10:00 - 15:00
-                                <br>Выходные: воскресенье</p><br>
-
-                            <h2>Наши проекты</h2>
-                             <hr>
-                            <p><a href="http://ivr-voice.com/" class="link2">IVR-Voice</a></p>
-                            <p><a href="http://detskie-golosa.ru/" class="link2">Детские голоса</a></p>
-                             <br>
-                             <h2>Наши партнеры</h2>
-                             <hr>
-                            <p><a href="http://www.mango-office.ru/" class="link2">Mango-office</a></p>
-                            <br><br>
+                        <div class="col-md-5">
+                           <div class="oprosnik">
+                            <h4>АВТОМОБИЛЬ «ХАММЕР»</h4>
+<p class="littext">(мужской голос)<br> Для кого-то, он дикий и необузданный хищник (рык) <br>Кому-то, послушный и ласковый зверь (мур) <br>Каждый найдет в нем что-то свое!<br> Неудержимый характер и сильное сердце под капотом!<br> „Хаммер” – эталон среди внедорожников!<br> Инфо-часть:  Дай волю Хаммеру! (звукоэффект)<br>
+Особый внедорожник от официального дистрибьютера „Дженерал Моторз”. Подробности на сайте ...(пэкшот)<br>
+Хаммер... укроти его силу!</p></div>
                         </div>
-                        <div class="col-md-9 col-sm-8">
-
-                            <div class="row">
-                                <div class="col-md-3">
-                                    <figure><img src="images/cnt_k_lara.png" alt=""></figure>
-                                </div>
-                                <div class="col-md-9">
-                                    <h4 class="nospace">Лара Ярошенко </h4>
-                                    <p class="cursive">руководитель, администратор</p>
-                                </div>
+                        <div class="col-md-7">
+                            <div>
+                                <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
                             </div>
-                            <div class="row">
-                                <div class="col-md-3">
-                                   <figure><img src="images/cnt_k_kuba.png" alt=""></figure>
-                                </div>
-                                <div class="col-md-9">
-                                    <h4 class="nospace">Леонид Алмазов </h4>
-                                    <p class="cursive">креативный директор</p>
-                                    <p class="littext">Пишет сценарии к рекламе с 1905 года. В произведениях Маяковского и Есенина нередко вылавливает свои мысли и идеи. Сделав небольшой перерыв в 1917, в 1991 году с утроенной силой взялся за работу. Опыт и житейская мудрость, несколько с честью пережитых браков, хорошее чувство юмора, выдержанное клиентами, разбросанными по всему миру, сделали Леонида Иосифовича ярким бриллиантом. «Продать – значит подать», – считает Леонид Алмазов… И таки подает!</p>
-                                </div>
+                            <div class="righttext">
+                               <h2>Сценарий</h2>
+                               <hr>
+                                <p>Успех рекламного ролика в первую очередь зависит от правильного и грамотного составленного сценария, а также его оригинальности. Наша компания занимается изготовлением сценариев для аудио- и видеороликов. </p>
+                                <p>
+Выгоды и преимущества оригинальных сценариев агентства:
+-Создание позитивного образа, а также повышение узнаваемости компании, завоевание доверия к бренду или услугам;
+-Привлечение новых и удержание настоящих клиентов, создание подсознательных образов и мощных мотивационных посылов;
+-Улучшение имиджа вашей компании путем использования нетрадиционных, смелых текстовых и игровых решений в аудио и видео роликах. </p>
                             </div>
-                            <div class="row">
-                                <div class="col-md-3">
-                                   <figure><img src="images/cnt_k_katya.png" alt=""></figure>
-                                </div>
-                                <div class="col-md-9">
-                                    <h4 class="nospace">Екатерина Лебедь</h4>
-                                    <p class="cursive">бухгалтер, юрист</p>
-                                    <p class="littext">Одна из самых загадочных и засекреченных фигур. Прежде чем стать бухгалтером и юристом в нашем агентстве, долгое время мечтала работать в суде и получать подарки, но, взвесив все минусы и плюсы, посоветовавшись с бабушкой и совестью, она выбрала «Силу ФМ». Кроме юридического образования, у Екатерины есть домашние животные и подруги, которые не дают ей полностью и бесповоротно кануть в пучине документооборота.</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-3">
-                                   <figure><img src="images/cnt_k_bogdan.png" alt=""></figure>
-                                </div>
-                                <div class="col-md-9">
-                                    <h4 class="nospace">Богдан Скоров</h4>
-                                    <p class="cursive">звукорежиссер, дизайнер, композитор</p>
-                                    <p class="littext">Если вы видели летящего на горном велосипеде задумчивого велосипедиста, то, скорее всего это был Богдан, опаздывающий на запись в студию. "Звукорежиссёрами не рождаются" – любит повторять он. Хотя сам звукорежиссером стал случайно. Постоянное самосовершенствование Богдана не терпит границ, поэтому он периодически выключает телефон, пропадая из зоны досягаемости простыми смертными.</p>
-                                </div>
-                            </div>
-                                <div class="row">
-                                <div class="col-md-3">
-                                   <figure><img src="images/cnt_k_vadim.png" alt=""></figure>
-                                </div>
-                                <div class="col-md-9">
-                                    <h4 class="nospace">Вадим Кузьмин</h4>
-                                    <p class="cursive">звукорежиссер, аранжировщик</p>
-                                    <p class="littext">Именно труд первого звукорежиссера, по мнению Вадима Кузьмина, сделал из обезьяны человека. Эволюция Вадима вне конкуренции. Ценитель вкуса в рекламных роликах, запаха корпоративных презентаций и цвета документального видео. Знает с чего начинать ролик и чем его заканчивать, почему в этом месте нужна труба, а, вот в этом – молодая девушка. Вадим знает всё о звуке все, кроме одного...сколько еще работы со звуком ему подбросят вечером.</p>
-                                </div>
-                            </div>
+                            </p>
                         </div>
                     </div>
                 </div>
-
+                </hr>
 
             </div>
         </div>
