--- a/index_05.html
+++ b/index_05.html
@@ -64,7 +64,7 @@
 
                 <li><a class="contact" href="#"><span>КОНТАКТЫ</span></a></li>
             </ul>
-          <!--появление меню после прокрутки 300 пикселей вниз с фейдом в 400мс -->
+       <!--появление меню после прокрутки 300 пикселей вниз с фейдом в 400мс -->
             <script>
                 jQuery(function (f) {
                     var element = f('#navigationMenu');
@@ -128,7 +128,7 @@
                                         <a href="index_04.html"><img src="img/film_c.png" alt="img09" /><span>Создание видеороликов</span></a>
                                     </li>
                                     <li>
-                                        <a href="index_05.html"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
+                                        <a href="#"><img src="img/vinil.png" alt="img09" /><span>Музыкальные подложки</span></a>
                                     </li>
                                 </ul>
                             </li>
@@ -151,19 +151,27 @@
 
         <div class="fillcontainer">
         <div class="row">
-            <div class="col-md-3"> <p>Реклама</p> <img src="http://placehold.it/250x400" alt=""></div>
+            <div class="col-md-3">
+             <h2>Заказ</h2>
+             <hr>
+              <p class="basictext">Заказать музыку вы можете связавшись с нами по телефону или отправив запрос на наш электронный адрес info@sila.fm. Мы свяжемся с вами в ближайшее время для более детального обсуждения вашего запроса.</p>
+
+                 <p>Реклама</p>
+                 <img src="http://placehold.it/250x400" alt="">
+             </div>
             <div class="col-md-9">
 
 <a class="palitra"><img src="images/palit.png" alt="silafm"> </a>
-        <h2>Видеоролики</h2><hr>
-          <p> Мы также занимаемся изготовлением и монтажем рекламного и корпоративного видео, изготавливаем слайдшоу, а также занимаемся мультипликацией. Более детально с видами работ и примерами вы можете ознакомиться ниже. </p>
+        <h2>Музыкальные подложки</h2><hr>
+          <p class="basictext">В свете непрекращающихся лицензионных войн между правообладателями музыкального продукта, исполнителями и юристами ТВ и радиостанций, всегда возникает проблема законности использования музыки и наличия на нее авторских прав. <b>Aгентство Звука «Сила.ФМ»</b> ВСЕГДА использует только лицензионный музыкальный продукт, как отечественных, так и зарубежных звукозаписывающих ориентированных компаний. Основную музыкальную базу агентства составляет т.н. «Royalty Free» музыка - лицензионный музыкальный продукт, записанный в студиях Канады, Франции, США, России, который был изначально адаптирован для подобного рода работ.
+Кроме того, мы самостоятельно изготавливаем авторскую музыку, что исключает возможность возникновения проблем с правообладателем. </p>
 
 <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <!-- Заголовок 1 панели -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. Видео открытка, слайд-шоу</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">1. Корпоративная музыка</a>
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in">
@@ -178,7 +186,7 @@
     <!-- Заголовок 2 панели -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. Видеозаставка, анимация логотипа</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">2. Трейлерная музыка</a>
       </h4>
     </div>
     <div id="collapseTwo" class="panel-collapse collapse">
@@ -193,7 +201,7 @@
     <!-- Заголовок 3 панели -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Анимационное видео 2D, 3D</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. Кавер-версии</a>
       </h4>
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
@@ -207,7 +215,7 @@
     <!-- Заголовок 3 панели -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">4. Классическая мультипликация</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">4. Саунд-трэки</a>
       </h4>
     </div>
     <div id="collapseFour" class="panel-collapse collapse">
@@ -221,7 +229,7 @@
     <!-- Заголовок 3 панели -->
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">5. Монтаж отснятого видео</a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">5. Другая музыка</a>
       </h4>
     </div>
     <div id="collapseFive" class="panel-collapse collapse">
@@ -231,34 +239,8 @@
       </div>
     </div>
   </div>
-    <div class="panel panel-default">
-    <!-- Заголовок 3 панели -->
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">6. Внесение изменений в готовое видео</a>
-      </h4>
-    </div>
-    <div id="collapseSix" class="panel-collapse collapse">
-      <!-- Содержимое 3 панели -->
-      <div class="panel-body">
-          <div class="col-md-5">  <img src="http://placehold.it/300x200" alt=""></div> <div class="col-md-7"><p class="basictext"> Перевод и изменение титров, плашек на уже готовом видео. Набор субтитров.</p></div>
-      </div>
-    </div>
-  </div>
-      <div class="panel panel-default">
-    <!-- Заголовок 3 панели -->
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">7. Видеопрезентация</a>
-      </h4>
-    </div>
-    <div id="collapseSeven" class="panel-collapse collapse">
-      <!-- Содержимое 3 панели -->
-      <div class="panel-body">
-<div class="col-md-5">  <img src="http://placehold.it/300x200" alt=""></div> <div class="col-md-7"><p class="basictext">  Освещение публичных мероприятий, связанных с открытием компаний, презентаций новых товаров или продуктов на рынке, чемпионатов различной тематики и направленности.</p></div>
-      </div>
-    </div>
-  </div>
+
+
 </div>
 
 
